Fix the z-index of connection notifications. [skip ci]

--- a/viewer/latextoybox.css
+++ b/viewer/latextoybox.css
@@ -217,6 +217,7 @@ html[dir='rtl'] .findbar {
 
 #notify-disconnected[class="hide"] {
     opacity: 0;
+    z-index: -1;
 }
 
 #notify-reconnected {
@@ -229,5 +230,6 @@ html[dir='rtl'] .findbar {
 
 #notify-reconnected[class="hide"] {
     opacity: 0;
+    z-index: -1;
     transition: opacity 0.5s ease-in-out;
 }
